--- a/project 2/index.html
+++ b/project 2/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width=devoce-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>
         Random Jokes
@@ -14,7 +14,14 @@
 <body>
 
 
+    <div class="joke-container">
 
+        <header> Make your day with awesome jokes.</header>
+
+        <div id="jokes"> Your Jokes are loading...</div>
+
+        <button id="next">Next Joke</button>
+    </div>
 
 
 
