--- a/project 2/index.html
+++ b/project 2/index.html
@@ -18,7 +18,7 @@
 
         <header> Make your day with awesome jokes.</header>
 
-        <div id="jokes"> Your Jokes are loading...</div>
+        <div id="jokes"> Your Jokes Will load here !...</div>
 
         <button id="next">Next Joke</button>
     </div>
